--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="panel" [style.background-image]="'url(' + background + ')'">
-
+<!-- <div class="panel" [style.background-image]="'url(' + background + ')'">
+-->
 <app-logging></app-logging>
 
 <app-messages></app-messages>
@@ -21,8 +21,9 @@
 </div>
 
 </div>
-
+<!-- 
 </div>
+-->
 
 
 
