--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-<div class="item height120" *ngFor="let item of items">
+<div class="item height120 item_grad" *ngFor="let item of items">
 
   <div class="item-left">
     <div class = "img_frame">
